# Wazuh-Custom

./: .env.example  .gitignore  FEEDBACK_CAPTURE_UX.md  INTEGRATION_GUIDE_FRESH_GRADUATES.txt  Makefile  README.md  alembic.ini  pyproject.toml  tines-block.sh
alembic/: env.py
alembic/versions/: 3f648335aec0_initial_migration_phase_0_core_tables.py  ed0abddeb8b3_add_dedupe_hash_to_raw_alerts_for_.py
config/mappings/: default.yml
scripts/: migrate_sqlite.sh
src/ueba/: __init__.py
src/ueba/api/: auth.py  dependencies.py  main.py  schemas.py
src/ueba/api/routers/: entities.py  events.py  feedback.py  health.py
src/ueba/config/: __init__.py  mapping_loader.py
src/ueba/db/: base.py  models.py
src/ueba/logging/: __init__.py  alert_logger.py
src/ueba/services/analyzer/: README.md  __init__.py  analyzer_service.py  baseline.py  pipeline.py  repository.py  service.py
src/ueba/services/mapper/: __init__.py  inputs.py  mapper.py  mapper_service.py  persistence.py  utils.py
src/ueba/utils/: __init__.py  env.py
static/: dashboard.js  dashboard.test.js  index.html
static/js/: dashboard.js
templates/: dashboard.html
tests/: __init__.py  conftest.py  test_alert_logger.py  test_analyzer_pipeline.py  test_analyzer_repository.py  test_analyzer_service.py  test_analyzer_service_baseline.py  test_api_auth.py  test_api_entities.py  test_api_events.py  test_api_feedback.py  test_api_health.py  test_baseline.py  test_dashboard_template.py  test_mapper_service.py  test_mapping_loader.py  test_mapping_validation.py
tests/fixtures/: sample_alerts.jsonl
