[tool.poetry]
name = "ueba"
version = "0.1.0"
description = "User and Entity Behavior Analytics for Wazuh"
authors = ["Wazuh Custom"]
readme = "README.md"
packages = [{include = "ueba", from = "src"}]

[tool.poetry.dependencies]
python = "^3.9"
sqlalchemy = "^2.0.0"
alembic = "^1.13.0"
python-dotenv = "^1.0.0"
psycopg = {version = "^3.1.0", extras = ["binary"], optional = true}
pyyaml = "^6.0.0"
pydantic = "^2.0.0"
fastapi = "^0.104.0"
uvicorn = {version = "^0.24.0", extras = ["standard"]}

[tool.poetry.extras]
postgresql = ["psycopg"]

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = "^23.0.0"
ruff = "^0.1.0"
mypy = "^1.7.0"
httpx = "^0.25.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ["py39"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.mypy]
python_version = "3.9"
strict = false
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
